--- a/src/api/src/main/resources/application.properties
+++ b/src/api/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.azure.passwordless-enabled=true
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath*:schema-all.sql
-spring.sql.init.username=${AZURE_PSQL_USERNAME}
+spring.sql.init.username=${AZURE_POSTGRESQL_USERNAME}
 
 springdoc.swagger-ui.use-root-path=true
